--- a/docs/docs-ref-autogen/excel_release/excel.pivotfieldcollection.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.pivotfieldcollection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.PivotFieldCollection
     summary: |-
-      <span data-ttu-id="04deb-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="04deb-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
+      <span data-ttu-id="8124a-101">PivotHierarchy 中的透视字段对象的集合。</span><span class="sxs-lookup"><span data-stu-id="8124a-101">A collection of PivotField objects within a PivotHierarchy.</span></span>
 
-      <span data-ttu-id="04deb-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04deb-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8124a-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8124a-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.PivotFieldCollection
     fullName: Excel.PivotFieldCollection
     langs:
@@ -24,7 +24,7 @@ items:
       - excel_release.Excel.PivotFieldCollection.load_2
       - excel_release.Excel.PivotFieldCollection.toJSON
   - uid: excel_release.Excel.PivotFieldCollection.context
-    summary: <span data-ttu-id="04deb-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="04deb-103">The request context associated with the object.</span></span> <span data-ttu-id="04deb-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="04deb-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="8124a-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="8124a-103">The request context associated with the object.</span></span> <span data-ttu-id="8124a-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="8124a-104">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - RequestContext
   - uid: excel_release.Excel.PivotFieldCollection.getCount
     summary: |-
-      <span data-ttu-id="04deb-105">获取集合中的透视层级结构的数量。</span><span class="sxs-lookup"><span data-stu-id="04deb-105">Gets the number of pivot hierarchies in the collection.</span></span>
+      <span data-ttu-id="8124a-105">获取集合中的数据透视字段数。</span><span class="sxs-lookup"><span data-stu-id="8124a-105">Gets the number of pivot fields in the collection.</span></span>
 
-      <span data-ttu-id="04deb-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04deb-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8124a-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8124a-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getCount()
     fullName: getCount()
     langs:
@@ -53,9 +53,9 @@ items:
         description: ''
   - uid: excel_release.Excel.PivotFieldCollection.getItem
     summary: |-
-      <span data-ttu-id="04deb-107">按名称或 ID 获取 PivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="04deb-107">Gets a PivotHierarchy by its name or id.</span></span>
+      <span data-ttu-id="8124a-107">按其名称或 id 获取透视字段。</span><span class="sxs-lookup"><span data-stu-id="8124a-107">Gets a PivotField by its name or id.</span></span>
 
-      <span data-ttu-id="04deb-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04deb-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8124a-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8124a-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getItem(name)
     fullName: getItem(name)
     langs:
@@ -69,14 +69,14 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="04deb-109">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="04deb-109">Name of the PivotTable to be retrieved.</span></span>
+          description: <span data-ttu-id="8124a-109">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="8124a-109">Name of the PivotTable to be retrieved.</span></span>
           type:
             - string
   - uid: excel_release.Excel.PivotFieldCollection.getItemOrNullObject
     summary: |-
-      <span data-ttu-id="04deb-110">按名称获取 PivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="04deb-110">Gets a PivotHierarchy by name.</span></span> <span data-ttu-id="04deb-111">如果 PivotHierarchy 不存在，则返回 Null 对象。</span><span class="sxs-lookup"><span data-stu-id="04deb-111">If the PivotHierarchy does not exist, will return a null object.</span></span>
+      <span data-ttu-id="8124a-110">按名称获取透视字段。</span><span class="sxs-lookup"><span data-stu-id="8124a-110">Gets a PivotField by name.</span></span> <span data-ttu-id="8124a-111">如果透视字段不存在, 则将返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="8124a-111">If the PivotField does not exist, will return a null object.</span></span>
 
-      <span data-ttu-id="04deb-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="04deb-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="8124a-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8124a-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getItemOrNullObject(name)
     fullName: getItemOrNullObject(name)
     langs:
@@ -90,11 +90,11 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="04deb-113">要检索的 PivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="04deb-113">Name of the PivotHierarchy to be retrieved.</span></span>
+          description: <span data-ttu-id="8124a-113">要检索的透视字段的名称。</span><span class="sxs-lookup"><span data-stu-id="8124a-113">Name of the PivotField to be retrieved.</span></span>
           type:
             - string
   - uid: excel_release.Excel.PivotFieldCollection.items
-    summary: <span data-ttu-id="04deb-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="04deb-114">Gets the loaded child items in this collection.</span></span>
+    summary: <span data-ttu-id="8124a-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="8124a-114">Gets the loaded child items in this collection.</span></span>
     name: items
     fullName: items
     langs:
@@ -106,15 +106,15 @@ items:
         type:
           - 'Excel.PivotField[]'
   - uid: excel_release.Excel.PivotFieldCollection.load
-    summary: <span data-ttu-id="04deb-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="04deb-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="04deb-116">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="04deb-116">You must call "context.sync()" before reading the properties.</span></span>
+    summary: <span data-ttu-id="8124a-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8124a-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8124a-116">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="8124a-116">You must call "context.sync()" before reading the properties.</span></span>
     remarks: |-
-      <span data-ttu-id="04deb-117">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="04deb-117">In addition to this signature, this method has the following signatures:</span></span>
+      <span data-ttu-id="8124a-117">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="8124a-117">In addition to this signature, this method has the following signatures:</span></span>
 
-      <span data-ttu-id="04deb-118">`load(option?: string | string[]): Excel.PivotFieldCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="04deb-118">`load(option?: string | string[]): Excel.PivotFieldCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      <span data-ttu-id="8124a-118">`load(option?: string | string[]): Excel.PivotFieldCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8124a-118">`load(option?: string | string[]): Excel.PivotFieldCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
 
-      <span data-ttu-id="04deb-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotFieldCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="04deb-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotFieldCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      <span data-ttu-id="8124a-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotFieldCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="8124a-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotFieldCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
-      <span data-ttu-id="04deb-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotFieldCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="04deb-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotFieldCollection` - Only available on collection types.</span></span> <span data-ttu-id="04deb-121">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="04deb-121">It is similar to the preceding signature.</span></span> <span data-ttu-id="04deb-122">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="04deb-122">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="04deb-123">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="04deb-123">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="04deb-124">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="04deb-124">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      <span data-ttu-id="8124a-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotFieldCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="8124a-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotFieldCollection` - Only available on collection types.</span></span> <span data-ttu-id="8124a-121">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="8124a-121">It is similar to the preceding signature.</span></span> <span data-ttu-id="8124a-122">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="8124a-122">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="8124a-123">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="8124a-123">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="8124a-124">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="8124a-124">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
     name: load(option)
     fullName: load(option)
     langs:
@@ -132,7 +132,7 @@ items:
           type:
             - Excel.Interfaces.PivotFieldCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
   - uid: excel_release.Excel.PivotFieldCollection.load_1
-    summary: '<span data-ttu-id="04deb-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="04deb-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="04deb-126">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="04deb-126">You must call `context.sync()` before reading the properties.</span></span>'
+    summary: '<span data-ttu-id="8124a-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8124a-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8124a-126">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8124a-126">You must call `context.sync()` before reading the properties.</span></span>'
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -146,7 +146,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: '<span data-ttu-id="04deb-127">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="04deb-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>'
+          description: '<span data-ttu-id="8124a-127">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8124a-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>'
           type:
             - 'string | string[]'
   - uid: excel_release.Excel.PivotFieldCollection.load_2
@@ -167,7 +167,7 @@ items:
           type:
             - office.OfficeExtension.LoadOption
   - uid: excel_release.Excel.PivotFieldCollection.toJSON
-    summary: '<span data-ttu-id="04deb-128">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="04deb-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="04deb-129">.</span><span class="sxs-lookup"><span data-stu-id="04deb-129"></span></span> <span data-ttu-id="04deb-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="04deb-130"></span></span><!-- --><span data-ttu-id="04deb-131">反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotFieldCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.PivotFieldCollectionData`</span><span class="sxs-lookup"><span data-stu-id="04deb-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.PivotFieldCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotFieldCollectionData`</span></span><!-- --><span data-ttu-id="04deb-132">), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="04deb-132">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: '<span data-ttu-id="8124a-128">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="8124a-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="8124a-129">.</span><span class="sxs-lookup"><span data-stu-id="8124a-129"></span></span> <span data-ttu-id="8124a-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="8124a-130"></span></span><!-- --><span data-ttu-id="8124a-131">反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotFieldCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.PivotFieldCollectionData`</span><span class="sxs-lookup"><span data-stu-id="8124a-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.PivotFieldCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotFieldCollectionData`</span></span><!-- --><span data-ttu-id="8124a-132">), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="8124a-132">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
