--- a/docs/docs-ref-autogen/excel_release/excel.pivotitemcollection.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.pivotitemcollection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel_release.Excel.PivotItemCollection
     summary: |-
-      <span data-ttu-id="e01f5-101">表示与父透视字段相关的所有透视项的集合。</span><span class="sxs-lookup"><span data-stu-id="e01f5-101">Represents a collection of all the Pivot Items related to their parent PivotField.</span></span>
+      <span data-ttu-id="3176f-101">代表与父透视字段相关的所有 PivotItem 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="3176f-101">Represents a collection of all the PivotItem objects related to their parent PivotField.</span></span>
 
-      <span data-ttu-id="e01f5-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e01f5-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3176f-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3176f-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.PivotItemCollection
     fullName: Excel.PivotItemCollection
     langs:
@@ -24,7 +24,7 @@ items:
       - excel_release.Excel.PivotItemCollection.load_2
       - excel_release.Excel.PivotItemCollection.toJSON
   - uid: excel_release.Excel.PivotItemCollection.context
-    summary: <span data-ttu-id="e01f5-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="e01f5-103">The request context associated with the object.</span></span> <span data-ttu-id="e01f5-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="e01f5-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="3176f-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="3176f-103">The request context associated with the object.</span></span> <span data-ttu-id="3176f-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="3176f-104">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - RequestContext
   - uid: excel_release.Excel.PivotItemCollection.getCount
     summary: |-
-      <span data-ttu-id="e01f5-105">获取集合中的透视层级结构的数量。</span><span class="sxs-lookup"><span data-stu-id="e01f5-105">Gets the number of pivot hierarchies in the collection.</span></span>
+      <span data-ttu-id="3176f-105">获取集合中的数据透视项的数目。</span><span class="sxs-lookup"><span data-stu-id="3176f-105">Gets the number of pivot items in the collection.</span></span>
 
-      <span data-ttu-id="e01f5-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e01f5-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3176f-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3176f-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getCount()
     fullName: getCount()
     langs:
@@ -53,9 +53,9 @@ items:
         description: ''
   - uid: excel_release.Excel.PivotItemCollection.getItem
     summary: |-
-      <span data-ttu-id="e01f5-107">按名称或 ID 获取 PivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="e01f5-107">Gets a PivotHierarchy by its name or id.</span></span>
+      <span data-ttu-id="3176f-107">按其名称或 id 获取 PivotItem。</span><span class="sxs-lookup"><span data-stu-id="3176f-107">Gets a PivotItem by its name or id.</span></span>
 
-      <span data-ttu-id="e01f5-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e01f5-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3176f-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3176f-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getItem(name)
     fullName: getItem(name)
     langs:
@@ -69,14 +69,14 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="e01f5-109">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="e01f5-109">Name of the PivotTable to be retrieved.</span></span>
+          description: <span data-ttu-id="3176f-109">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="3176f-109">Name of the PivotTable to be retrieved.</span></span>
           type:
             - string
   - uid: excel_release.Excel.PivotItemCollection.getItemOrNullObject
     summary: |-
-      <span data-ttu-id="e01f5-110">按名称获取 PivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="e01f5-110">Gets a PivotHierarchy by name.</span></span> <span data-ttu-id="e01f5-111">如果 PivotHierarchy 不存在，则返回 Null 对象。</span><span class="sxs-lookup"><span data-stu-id="e01f5-111">If the PivotHierarchy does not exist, will return a null object.</span></span>
+      <span data-ttu-id="3176f-110">按名称获取 PivotItem。</span><span class="sxs-lookup"><span data-stu-id="3176f-110">Gets a PivotItem by name.</span></span> <span data-ttu-id="3176f-111">如果 PivotItem 不存在, 则将返回一个 null 对象。</span><span class="sxs-lookup"><span data-stu-id="3176f-111">If the PivotItem does not exist, will return a null object.</span></span>
 
-      <span data-ttu-id="e01f5-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e01f5-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="3176f-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3176f-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getItemOrNullObject(name)
     fullName: getItemOrNullObject(name)
     langs:
@@ -90,11 +90,11 @@ items:
         description: ''
       parameters:
         - id: name
-          description: <span data-ttu-id="e01f5-113">要检索的 PivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="e01f5-113">Name of the PivotHierarchy to be retrieved.</span></span>
+          description: <span data-ttu-id="3176f-113">要检索的 PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="3176f-113">Name of the PivotItem to be retrieved.</span></span>
           type:
             - string
   - uid: excel_release.Excel.PivotItemCollection.items
-    summary: <span data-ttu-id="e01f5-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="e01f5-114">Gets the loaded child items in this collection.</span></span>
+    summary: <span data-ttu-id="3176f-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="3176f-114">Gets the loaded child items in this collection.</span></span>
     name: items
     fullName: items
     langs:
@@ -106,15 +106,15 @@ items:
         type:
           - 'Excel.PivotItem[]'
   - uid: excel_release.Excel.PivotItemCollection.load
-    summary: <span data-ttu-id="e01f5-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e01f5-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e01f5-116">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="e01f5-116">You must call "context.sync()" before reading the properties.</span></span>
+    summary: <span data-ttu-id="3176f-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3176f-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3176f-116">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="3176f-116">You must call "context.sync()" before reading the properties.</span></span>
     remarks: |-
-      <span data-ttu-id="e01f5-117">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="e01f5-117">In addition to this signature, this method has the following signatures:</span></span>
+      <span data-ttu-id="3176f-117">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="3176f-117">In addition to this signature, this method has the following signatures:</span></span>
 
-      <span data-ttu-id="e01f5-118">`load(option?: string | string[]): Excel.PivotItemCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="e01f5-118">`load(option?: string | string[]): Excel.PivotItemCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      <span data-ttu-id="3176f-118">`load(option?: string | string[]): Excel.PivotItemCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="3176f-118">`load(option?: string | string[]): Excel.PivotItemCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
 
-      <span data-ttu-id="e01f5-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotItemCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="e01f5-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotItemCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      <span data-ttu-id="3176f-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotItemCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="3176f-119">`load(option?: { select?: string; expand?: string; }): Excel.PivotItemCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
-      <span data-ttu-id="e01f5-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotItemCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="e01f5-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotItemCollection` - Only available on collection types.</span></span> <span data-ttu-id="e01f5-121">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="e01f5-121">It is similar to the preceding signature.</span></span> <span data-ttu-id="e01f5-122">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="e01f5-122">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="e01f5-123">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="e01f5-123">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="e01f5-124">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="e01f5-124">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      <span data-ttu-id="3176f-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotItemCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="3176f-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotItemCollection` - Only available on collection types.</span></span> <span data-ttu-id="3176f-121">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="3176f-121">It is similar to the preceding signature.</span></span> <span data-ttu-id="3176f-122">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="3176f-122">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="3176f-123">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="3176f-123">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="3176f-124">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="3176f-124">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
     name: load(option)
     fullName: load(option)
     langs:
@@ -132,7 +132,7 @@ items:
           type:
             - Excel.Interfaces.PivotItemCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
   - uid: excel_release.Excel.PivotItemCollection.load_1
-    summary: '<span data-ttu-id="e01f5-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e01f5-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e01f5-126">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e01f5-126">You must call `context.sync()` before reading the properties.</span></span>'
+    summary: '<span data-ttu-id="3176f-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="3176f-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="3176f-126">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="3176f-126">You must call `context.sync()` before reading the properties.</span></span>'
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -146,7 +146,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: '<span data-ttu-id="e01f5-127">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="e01f5-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>'
+          description: '<span data-ttu-id="3176f-127">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="3176f-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>'
           type:
             - 'string | string[]'
   - uid: excel_release.Excel.PivotItemCollection.load_2
@@ -167,7 +167,7 @@ items:
           type:
             - office.OfficeExtension.LoadOption
   - uid: excel_release.Excel.PivotItemCollection.toJSON
-    summary: '<span data-ttu-id="e01f5-128">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="e01f5-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="e01f5-129">.</span><span class="sxs-lookup"><span data-stu-id="e01f5-129"></span></span> <span data-ttu-id="e01f5-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="e01f5-130"></span></span><!-- --><span data-ttu-id="e01f5-131">反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotItemCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.PivotItemCollectionData`</span><span class="sxs-lookup"><span data-stu-id="e01f5-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.PivotItemCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotItemCollectionData`</span></span><!-- --><span data-ttu-id="e01f5-132">), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="e01f5-132">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: '<span data-ttu-id="3176f-128">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="3176f-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="3176f-129">.</span><span class="sxs-lookup"><span data-stu-id="3176f-129"></span></span> <span data-ttu-id="3176f-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="3176f-130"></span></span><!-- --><span data-ttu-id="3176f-131">反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.PivotItemCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.PivotItemCollectionData`</span><span class="sxs-lookup"><span data-stu-id="3176f-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.PivotItemCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotItemCollectionData`</span></span><!-- --><span data-ttu-id="3176f-132">), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="3176f-132">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
